<resources>
    <string name="app_name">RecyclerViewTest</string>
    <string name="my_study">我的课程</string>
    <string name="setting">设置</string>
    <string name="my_download">我的下载</string>
    <string name="message_center">通知中心</string>
    <string name="my_message">我的消息</string>
    <string name="my_grade">我的成绩</string>
    <string name="my_notepad">我的错题</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="commit">提交</string>
    <string name="phone">账号/手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_register">登录/注册</string>
    <string name="name_main_activity">系列课程</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="service_items">服务条款</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="check_code">验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="my_course">我的课程</string>
    <string name="course_category">课程分类</string>
    <string name="course_search">搜索课程</string>
    <string name="join_course">加入课程</string>
    <string name="course_introduce">课程简介：</string>
    <string name="course_teacher">授课教师：</string>
    <string name="question_teacher">老师答疑区</string>
    <string name="discuss_area">课堂交流区</string>
    <string name="release_topic">发表话题</string>
    <string name="title">标题：</string>
    <string name="input_title">输入标题</string>
    <string name="input_content">输入正文</string>
    <string name="send_message">消息推送</string>
    <string name="app_update">应用升级</string>
    <string name="about_app">关于</string>
    <string name="feedback">功能反馈</string>
    <string name="exit_login">退出登录</string>
    <string name="delete">删除</string>
    <string name="reply">回复</string>
    <string name="practice">练习</string>
    <string name="practice_num">题目数量</string>
    <string name="time_limit">检测限时</string>
    <string name="deadline">截止时间</string>
    <string name="start_practice">开始答题</string>
    <string name="continue_practice">继续答题</string>
    <string name="last">上一题</string>
    <string name="next">下一题</string>
    <string name="item">题目</string>
    <string name="remain">剩余:</string>
    <string name="rate">/</string>
    <string name="search_tip">输入课程名</string>
    <string name="search">搜索</string>
    <string name="course">课程</string>
    <string name="gradeAnalyse">成绩分析</string>
    <string name="highestScore">最高分：</string>
    <string name="lowestScore">最低分：</string>
    <string name="averageScore">平均分：</string>
    <string name="rightRate">正确率：</string>
    <string name="rightAnswer">正确答案：</string>
    <string name="questionAnalysis">解析：</string>
    <string name="questionAnalysis1">解析</string>
    <string name="video_introduce">视频介绍：</string>

</resources>
