<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary">
        <Button
            android:layout_marginTop="10dp"
            android:onClick="back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_bg_back_white_blue"
            android:id="@+id/button" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="@dimen/lTextSize"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
        <TextView
            android:clickable="true"
            android:onClick="register"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:textSize="@dimen/lTextSize"
            android:textColor="@color/colorWhite"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <EditText
            android:id="@+id/edit_phone"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/phone"
            android:textColorHint="@color/darkGrey"
            android:maxLines="1"
            android:inputType="phone"
            android:maxLength="11"
            />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkGrey"/>
        <EditText
            android:id="@+id/edit_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:maxLength="16"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/password"
            android:textColorHint="@color/darkGrey"/>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/corner_rec_bg_blue_press"
        android:textColor="@color/white"/>
    <TextView
        android:clickable="true"
        android:onClick="forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/colorIconBlue"
        android:layout_marginTop="5dp"
        android:layout_gravity="right"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <CheckBox
            android:id="@+id/agreeProtocol"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:button="@null"
            android:background="@drawable/checkbox_circle"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/agree_protocol"
            android:gravity="center_vertical"/>
        <TextView
            android:onClick="checkServiceItems"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/service_items"
            android:textColor="@color/colorIconBlue"
            android:gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>