<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_bg_back_white_blue"
            android:onClick="back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/item"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lTextSize" />

        <TextView
            android:id="@+id/txtCurrIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lTextSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rate"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lTextSize" />

        <TextView
            android:id="@+id/txtSumIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lTextSize" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_error_que"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:onClick="last"
            android:text="@string/last" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/darkGrey" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:onClick="next"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>