<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg_back_white_blue"
            android:onClick="back" />

        <TextView
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/course"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/lTextSize"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/gradeAnalyse"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:layout_width="wrap_content"
                            android:text="@string/highestScore"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/highestScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/lowestScore"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/lowestScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        >
                        <TextView
                            android:layout_marginLeft="2dp"
                            android:layout_width="wrap_content"
                            android:text="@string/averageScore"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/averageScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/rightRate"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/rightRate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/gradeBaeChart"
                android:layout_width="match_parent"
                android:layout_height="400dp">

            </com.github.mikephil.charting.charts.BarChart>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/rightRatePie"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal">

            </com.github.mikephil.charting.charts.PieChart>
        </LinearLayout>
    </ScrollView>
</LinearLayout>